0.19.4 - in development
-----------------------
Maintenance release.


0.19.3 - 2010/11/26
-------------------
Maintenance release.

 * The 0.19 series is now marked as incompatible with bzr versions >= 2.3.
   This due to Bug #650905. (Gary van der Merwe)
 * qlog:
   * Fix actions that use the branch menu on PyQt 4.7.4.
     (Bug #621158, Gary van der Merwe)
   * Fix crash when trying to "Revert to this revision",
     "Update to this revision", etc. (Bug #680787, Gary van der Merwe)
 * Restore ignore button for error dialogs. (Gary van der Merwe)


0.19.2 - 2010/09/24
-------------------
Maintenance release.

 * Fix finding bzr.exe when running from bzrw.exe with out full path in the
   command line. Handle been launched from tortoisebzr without it having to
   change sys.executable. (Bug #640082, Bug #641557, Gary van der Merwe)


0.19.1 "Chestnut" - 2010/09/13
------------------------------
Maintenance release.

 * Fix modeltest.py so that it works with Qt 4.7.
   (Bug #614123, Gary van der Merwe)
 * qbrowse: fixed 'Mark as renamed' feature in treewidget.
   (Bug #620433, Alexander Belchenko)
 * qconfig: guess user id if there is no whoami set. 
   (Bug #622336, Gary van der Merwe, Alexander Belchenko)
 * qgetupdates: fixed API mismatch. (Bug #636510, Alexander Belchenko)
 * qlog:
   * better branch labels for `bzr qlog colo:` case. (Alexander Belchenko)
   * give a size hint for the GraphTagsBugsItemDelegate so that blured 
     rendering on Windows with PyQt 4.7 is avoided. (Gary van der Merwe)
 * qrun: fixed '--execute' mode. (Bug #590229, Simon Kersey) 


0.19 "Shepherd's Tree, aka Boscia albitrunca" - 2010/08/05
----------------------------------------------------------
Bazaar 2.2 companion release. Suitable for bzr 2.2 and bzr 2.1.

Changes since 0.19b2 release:

 * qlog:
   * Context menu actions for tag, and revert will now show a branch menu if
     more than one branch is open. (Craig Hewetson, Gary van der Merwe)