@@ -2,6 +2,10 @@
 -----------------------
 Maintenance release.
 
+ * qconflicts:
+   * Fixed internal error when deleting non-versioned files/directories.
+     (Alexander Belchenko, Bug #655451)
+
 
 0.19.3 - 2010/11/26
 -------------------
